Fix small gap in `.sticky.top`

--- a/utility.css
+++ b/utility.css
@@ -507,6 +507,11 @@
 	top: 0;
 }
 
+/* Avoids small gap on top that sometimes occurs */
+.sticky.top {
+	top: -1px;
+}
+
 .bottom {
 	bottom: 0;
 }
